# elderly-companion-robot

./: .gitignore  COMPLETE_SETUP_GUIDE.md  DOCUMENTATION.md  HARDWARE_SETUP_GUIDE.md  NEXT_STEPS.md  README.md
docs/archive/: ALTERNATIVE_FLASHING_METHODS.md  BOOTABLE_USB_FLASH_METHOD.md  DOCUMENTATION_INDEX.md  FIXING_TARGET_HARDWARE_SELECTION.md  FIX_4GB_DEFAULT_ISSUE.md  FIX_DEVICE_NOT_READY_TO_FLASH.md  FRESH_VM_START.md  HOW_TO_CHECK_SELECTED_DEVICE.md  JETSON_MODELS_EXPLAINED.md  OPTIONS_AND_RECOMMENDATIONS.md  QUICK_START.md  README.md  REFORMAT_USB_MAC.md  SDK_MANAGER_RESOLUTION_FIX.md  SDK_MANAGER_WALKTHROUGH.md  SELECTING_8GB_VARIANT.md  UTM_SETUP.md  VIRTUALBOX_SETUP.md
elderly_companion/ai_services/: DOCKER_RESOURCES.md  LOCAL_EXECUTION_GUIDE.md  VISION_TROUBLESHOOTING.md  docker-compose.yml  requirements_llm.txt  requirements_speech.txt  requirements_vision.txt  requirements_vision_alternative.txt  test_client.py  test_docker_config.sh  test_vision_local.sh
elderly_companion/ai_services/config/: personality.yaml
elderly_companion/ai_services/docker/: Dockerfile.llm  Dockerfile.speech  Dockerfile.vision  Dockerfile.vision.fixed
elderly_companion/ai_services/scripts/: llm_service.py  llm_service_ollama.py  (+4 more)
elderly_companion/ros2_workspace/src/companion_bridge/: package.xml  setup.py
elderly_companion/ros2_workspace/src/companion_bridge/companion_bridge/: __init__.py
elderly_companion/ros2_workspace/src/companion_bridge/companion_bridge/nodes/: __init__.py  ai_bridge.py  behavior_manager.py
scripts/: activate_venv.sh  setup_venvs.sh
